--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,16 +4,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/questionView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="34dp"
-        android:text="@string/hello_world" />
-
     <EditText
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
@@ -42,22 +32,38 @@
         android:onClick="enterAnswer"
         android:text="Enter" />
 
-    <Button
-        android:id="@+id/nextButton"
+    <TextView
+        android:id="@+id/questionView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/enterButton"
-        android:layout_below="@+id/enterButton"
-        android:onClick="nextQuestion"
-        android:text="Next" />
+        android:layout_below="@+id/resultView"
+        android:layout_marginTop="36dp"
+        android:text="@string/hello_world" />
 
     <TextView
         android:id="@+id/resultView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/nextButton"
-        android:layout_below="@+id/answerView"
-        android:layout_marginTop="27dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:text="TextView" />
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/resultView"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/enterButton"
+        android:layout_alignBottom="@+id/enterButton"
+        android:layout_alignRight="@+id/editText1"
+        android:onClick="nextQuestion"
+        android:text="Next" />
 
 </RelativeLayout>
