--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -29,8 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText1"
-        android:onClick="enterAnswer"
-        android:text="Enter" />
+        android:background="@drawable/check_selector"
+        android:onClick="enterAnswer" />
 
     <TextView
         android:id="@+id/questionView"
@@ -60,10 +60,10 @@
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/enterButton"
-        android:layout_alignBottom="@+id/enterButton"
-        android:layout_alignRight="@+id/editText1"
+        android:layout_below="@+id/editText1"
+        android:layout_toRightOf="@+id/enterButton"
+        android:background="@drawable/next_selector"
         android:onClick="nextQuestion"
-        android:text="Next" />
+         />
 
 </RelativeLayout>
