--- a/res/layout/main_game.xml
+++ b/res/layout/main_game.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="172dp"
-        android:text="Start"
+        android:background="@drawable/start_selector"
         android:onClick="startRecord" />
 
     <Button
@@ -21,7 +21,7 @@
         android:layout_alignRight="@+id/button1"
         android:layout_below="@+id/button1"
         android:layout_marginTop="46dp"
-        android:text="Exit"
+        android:background="@drawable/exit_selector"
         android:onClick="exit" />
 
     <Button
@@ -47,5 +47,14 @@
         android:layout_above="@+id/spinner1"
         android:layout_alignParentLeft="true"
         android:text="*Multiple language support still in development" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/spinner1"
+        android:onClick="review"
+        android:text="Review Basic Characters" />
 
 </RelativeLayout>
