--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,16 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity" 
+    android:background="#36342a"
+    android:id="@layout/activity_main">
 
     <EditText
         android:id="@+id/editText1"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/questionView"
-        android:layout_marginTop="68dp"
-        android:ems="10" >
-
+        android:layout_marginTop="8dp"
+        android:ems="10">
         <requestFocus />
     </EditText>
 
@@ -22,7 +23,9 @@
         android:layout_alignLeft="@+id/editText1"
         android:layout_centerVertical="true"
         android:layout_below="@+id/nextButton"
-        android:text="Correct Answer:" />
+        android:text="Correct Answer:" 
+        android:textSize="20sp"
+        android:textColor="#92d050"/>
 
     <Button
         android:id="@+id/enterButton"
@@ -33,20 +36,46 @@
         android:onClick="enterAnswer" />
 
     <TextView
+        android:id="@+id/instructionsView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/progressBar1"
+        android:layout_marginTop="8dp"
+        android:text="Type the reading of this phrase" 
+        android:textSize="20sp"
+        android:textColor="#6290f8"/>
+    
+    <TextView
         android:id="@+id/questionView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/resultView"
-        android:layout_marginTop="36dp"
-        android:text="@string/hello_world" />
+        android:layout_below="@+id/instructionsView"
+        android:text="@string/hello_world" 
+        android:textSize="20sp"/>
 
+    <Button
+        android:id="@+id/exitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:textColor="#f6361d"
+        android:text="X"
+        android:background="#36342a"
+        android:textSize="20sp"
+        android:paddingLeft="8dp"
+        android:onClick="exitMainActivity"/>
+    
     <TextView
         android:id="@+id/resultView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="TextView" />
+        android:text="Accuracy: \u221e%" 
+        android:textSize="20sp"
+        android:textColor="#92d050"
+        android:visibility="visible"/>
 
     <ProgressBar
         android:id="@+id/progressBar1"
