--- a/res/layout/setting_selection.xml
+++ b/res/layout/setting_selection.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity" 
+    android:background="#36342a">
 
     <TextView
         android:id="@+id/textView1"
