--- a/res/layout/result_page.xml
+++ b/res/layout/result_page.xml
@@ -4,18 +4,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" 
     android:background="#36342a">
-
+    
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/exitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="124dp"
-        android:onClick="back"
-        android:background="@drawable/back_selector"
-         />
-
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:textColor="#f6361d"
+        android:text="X"
+        android:background="#36342a"
+        android:textSize="20sp"
+        android:paddingLeft="8dp"
+        android:onClick="exitResultPage"/>    
+    
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -49,4 +51,26 @@
         android:text="Score"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"        
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="72dp"
+        android:layout_marginTop="8dp"        
+        android:onClick="sendFeedback"
+        android:background="@drawable/send_feedback"
+         />
+    
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"        
+        android:layout_centerHorizontal="true"
+        android:onClick="back"
+        android:background="@drawable/back_selector"
+         />
+    
 </RelativeLayout>
