--- a/res/layout/review_page.xml
+++ b/res/layout/review_page.xml
@@ -4,14 +4,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity" 
     android:background="#36342a">
-
-    <ImageView
-        android:id="@+id/imageView1"
+    
+    <Button
+        android:id="@+id/exitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:textColor="#f6361d"
+        android:text="X"
+        android:background="#36342a"
+        android:textSize="20sp"
+        android:paddingLeft="8dp"
+        android:onClick="exitReviewPage"/>
+    
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
+        android:contentDescription="imageView1"
+         />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:visibility="invisible"
+        android:contentDescription="imageView2"
          />
 
     <TextView
@@ -23,4 +47,15 @@
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+     <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp"
+        android:visibility="invisible"
+        android:onClick="buttonPressed"
+        android:background="@drawable/review_katakana"        
+         />    
 </RelativeLayout>
