--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/questionView"
         android:layout_marginTop="8dp"
+        android:inputType="textNoSuggestions|textVisiblePassword"
         android:ems="10">
         <requestFocus />
     </EditText>
