--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,10 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".MainActivity" 
     android:background="#36342a"
-    android:id="@layout/activity_main">
+    android:id="@layout/activity_main"
+    >
+<RelativeLayout 
+    
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <EditText
         android:id="@+id/editText1"
@@ -111,7 +117,8 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/youtube_player"
         android:layout_marginTop="68dp"
-        android:text="Link to Spotify"
+        android:text="Link to Xiami"
         android:onClick="openLink" />
 
 </RelativeLayout>
+</ScrollView>
