+major update (May 25, 2015)

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -107,20 +107,27 @@
         android:id="@+id/youtube_player"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nextButton"
+        android:layout_below="@+id/answerView"
         android:background="#fff"/>
-
-    <Button
-        android:id="@+id/button1"
+     
+     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_centerVertical="true"
         android:layout_below="@+id/youtube_player"
-        android:layout_marginTop="68dp"
-        android:text="Link to Xiami"
-        android:onClick="openLink" 
-        android:paddingTop="5dp"         
-        />
-
-</RelativeLayout>
+        android:text="Related Videos:" 
+        android:textSize="20sp"
+        android:textColor="#f9ce59"/>
+     
+     <ListView
+        android:id="@+id/videos_found"
+        android:layout_width="match_parent"
+        android:layout_height="320dip"
+        android:layout_alignLeft="@+id/editText1"
+        android:layout_below="@+id/textView3"
+        android:dividerHeight="2dp"
+        />       
+	</RelativeLayout>
 </ScrollView>
