+removed: superfluous repeating songs in Mandarin and Korean +removed: <requestFocus/> in activity_main.xml +added:
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true" >

in RelativeLayout of activity_main.xml
--> this prevents EditText from being auto-focused, which causes the
keyboard to pop-up and block the youtube video
--> suggested by Nikko

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,7 +10,10 @@
 <RelativeLayout 
     
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    
+    android:descendantFocusability="beforeDescendants"
+  	android:focusableInTouchMode="true" >
 
     <EditText
         android:id="@+id/editText1"
@@ -19,8 +22,8 @@
         android:layout_below="@+id/questionView"
         android:layout_marginTop="8dp"
         android:inputType="textNoSuggestions|textVisiblePassword"
-        android:ems="10">
-        <requestFocus />
+        android:ems="10"
+        >
     </EditText>
 
     <TextView
