--> fixed: text disappears when pressed --> some errors cause app to return to the title screen from game proper (this may be due to my device needed a restart) +revised: not highlighting incorrect character anymore, just show to complete correct answer

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -61,7 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructionsView"
         android:text="@string/hello_world" 
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textColor="#acacab"/>
 
     <Button
         android:id="@+id/exitButton"
