--- a/res/layout/song_selection.xml
+++ b/res/layout/song_selection.xml
@@ -13,7 +13,9 @@
         android:layout_marginBottom="12dp"
         android:layout_marginLeft="6dp"
         android:textSize="16sp"
-        android:text="Voltes 5" />
+        android:text="Voltes 5" 
+        android:textColor="#000000"
+        />
 
         <TextView
         android:id="@+id/textViewPlaceHolder"
@@ -21,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom ="@+id/textView1"
         android:text="textViewPlaceHolder" 
+        android:textColor="#000000"
         android:visibility="invisible"/>
 
     
