--- a/libs/NewQuickAction3D/res/layout/popup_vertical.xml
+++ b/libs/NewQuickAction3D/res/layout/popup_vertical.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout 
 	xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     >
 	    
 	<ScrollView 
 		android:id="@+id/scroller"
+    	android:layout_marginLeft="15dp"
+    	android:layout_marginRight="15dp"
 		android:layout_marginTop="16dip"
     	android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
+    	android:layout_height="180dp"
     	android:background="@drawable/popup"
     	android:fadingEdgeLength="5dip"
     	android:scrollbars="none">
@@ -19,7 +21,6 @@
 	    	android:orientation="vertical"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
 	        android:padding="10dip"/>
        
 	</ScrollView >
@@ -34,7 +35,7 @@
         android:id="@+id/arrow_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    	android:layout_below="@id/scroller"
+        android:layout_below="@id/scroller"
       	android:layout_marginTop="-4dip"
         android:src="@drawable/arrow_down" />
 
