--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -60,17 +60,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructionsView"
         android:text="@string/hello_world"
-        android:textColor="#000000"
+        android:textColor="#696969"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:textSize="20sp" />
+        android:textSize="19sp" />
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/youtube_player"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/enterButton"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="90dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:background="#000000"
@@ -89,7 +89,7 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/youtube_player"
         android:layout_centerHorizontal="true"
@@ -138,7 +138,7 @@
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/editText1"
+        android:layout_alignLeft="@+id/editText1"
         android:layout_below="@+id/editText1"
         android:background="@drawable/next_selector"
         android:onClick="nextQuestion"
