--- a/res/layout/main_game.xml
+++ b/res/layout/main_game.xml
@@ -29,8 +29,9 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/textView1"
+        android:layout_marginRight="15dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/exit_idle"
         android:onClick="exit" />
