--- a/res/layout/result_page.xml
+++ b/res/layout/result_page.xml
@@ -42,8 +42,10 @@
         android:id="@+id/exitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/button1"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp"        
         android:background="@drawable/exit_idle"
         android:onClick="exitResultPage"
         android:paddingLeft="8dp"
