--- a/res/layout/review_page.xml
+++ b/res/layout/review_page.xml
@@ -48,9 +48,10 @@
          android:id="@+id/exitButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
+		 android:layout_alignParentRight="true"
          android:layout_alignParentTop="true"
-         android:layout_toRightOf="@+id/button"
-         android:layout_marginLeft="25dp"
+         android:layout_marginRight="15dp"
+         android:layout_marginTop="5dp"
          android:background="@drawable/exit_idle"
          android:onClick="exitReviewPage" />
     
