--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -83,8 +83,7 @@
         android:layout_centerVertical="true"
         android:background="#d57728"
         android:divider="#B99C6B"
-        android:dividerHeight="1dp"
-        android:textAlignment="center" />
+        android:dividerHeight="1dp"/>
 
     <ImageView
         android:id="@+id/imageView1"
