Edit song selection UI and Related vids UI.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -78,9 +78,8 @@
     <ListView
         android:id="@+id/videos_found"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dip"
         android:layout_below="@+id/imageView1"
-        android:layout_centerVertical="true"
         android:background="#d57728"
         android:divider="#B99C6B"
         android:dividerHeight="1dp"/>
