--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context=".MainActivity" >
 
 <RelativeLayout
+    android:id="@+id/rel_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff"
