+merged code with Brent and Lev's. +fixed: Mandarin and Korean dictionaries +fixed: Sobakas song --> changed the Japanese space to ordinary space --> Daikirai -> daikirai (small caps) +added: して in the local Japanese dictionary +removed: "*Multiple language support still in development"

--- a/res/layout/main_game.xml
+++ b/res/layout/main_game.xml
@@ -31,7 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/textView1"
         android:layout_marginRight="15dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/exit_idle"
@@ -43,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/powered_by_usbong_imageview"
         android:layout_centerHorizontal="true"
-        android:text="*Multiple language support still in development" />
+        android:text="" />
 
     <Spinner
         android:id="@+id/spinner1"
