--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context=".MainActivity" >
 
 <RelativeLayout
+    android:id="@+id/rel_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff"
@@ -78,13 +79,11 @@
     <ListView
         android:id="@+id/videos_found"
         android:layout_width="match_parent"
-        android:layout_height="320dip"
+        android:layout_height="250dip"
         android:layout_below="@+id/imageView1"
-        android:layout_centerVertical="true"
         android:background="#d57728"
         android:divider="#B99C6B"
-        android:dividerHeight="1dp"
-        android:textAlignment="center" />
+        android:dividerHeight="1dp"/>
 
     <ImageView
         android:id="@+id/imageView1"
